_base.scss
// Note: I've just begun to use sass for the colours, I'm sure there's more
//       refactoring that could happen when I get chance.


// Define default grey colour scheme, unless already defined.
$doc-bg: #333333 !default;
$section-bg: #444444 !default;
$subsection-bg: #555555 !default;
$menu-bg: #555555 !default;
$menu-fg: #eeeeee !default;
$link-fg: #bbbbbb !default;
$highlight-fg: #cccccc !default;
$body-fg: #eeeeee !default;
$body-em: #ffffff !default;
// Define main fonts, these may well already be defined.
$body-font: sans-serif !default;
$heading-font: sans-serif !default;
$monospace-font: monospace !default;
// Define backups, these are unlikely to be defined but may be.
$backup-font: sans-serif !default;
$backup-monospace-font: monospace !default;

// Default to having text shadow
$shadow: true !default;

@mixin font-family-list($main, $backup) {
  @if $main == $backup {
    font-family: $main;
  } @else {
    font-family: $main, $backup;
  }
}


body {
  @include font-family-list($body-font, $backup-font);
  background-color: $doc-bg;
  padding: 0;
  margin: 0;
  color: $body-fg;
  @if $shadow {
    text-shadow: 0 1px 1px black;
  } @else {
    text-shadow: none;
  }
  line-height: 1.5;
}

/* HTML5 tags */
header, section, footer,
aside, nav, article, figure {
  display: block;
}

h1, h2, h3, h4, h5, h6 {
  margin: 1em 0.2em 0.2em 0.2em;
  font-weight: bold;
  line-height: 2;
}

header {
  margin: 0;
  padding: 0;
}

nav {
  margin: 1em 10em 0 0;
  padding: 0;
  text-align: center;
  color: $body-em;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-indent: 0;
}

nav li {
  display: inline;
  margin: 0 1em;
  padding: 1em 0.5em;
  padding: 0.5em;
  border: 2px solid $section-bg;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
}

nav a {
  display: inline-block;
  color: $body-em;
}

nav li.active {
  background-color: $section-bg;
}

body > h1, h1.title {
  @include font-family-list($heading-font, $backup-font);
  text-align: center;
  font-size: 240%;
  font-weight: normal;
  color: $highlight-fg;
  text-shadow: 0 2px 4px rgba(0,0,0,0.3);
  margin: 0.5em 1em 1em;
  padding: 0;
}

.byline {
  @include font-family-list($body-font, $backup-font);
  margin: 0;
  padding: 0.5ex 0 0;
  line-height: 1;
  font-size: 40%;
  font-weight: normal;
  font-variant: small-caps;
  @if $shadow {
    text-shadow: 0 1px 1px black;
  } @else {
    text-shadow: none;
  }
  color: $highlight-fg;
}

div.related {
  background-color: $menu-bg;
  color: $menu-fg;
  margin: 0;
  padding: 0.2em;
  clear: both;
}

div.related h3 {
  display: none;
}

div.related ul {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 0;
}

div.related li {
  display: inline;
}

div.related li.right {
  float: right;
  margin-right: 0.25em;
}

div.related a {
  color: $menu-fg;
}

div.section {
  background-color: $section-bg;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  margin: 2em 0;
  padding: 0 0 1em;
}

div.document > div.section {
  margin: 2em 2em;
}

div.section div.article-summary {
  border-bottom: 1px solid $doc-bg;
  font-size: 90%;
  font-style: italic;
  line-height: 1.4;
  color: $link-fg;
  margin: 0;
  padding: 0.5em 1em 0.5em;
}

div.section div.article-summary p {
  margin: 0;
  padding: 0;
}

div.section h1 {
  @include font-family-list($heading-font, $backup-font);
  color: $highlight-fg;
  text-align: left;
  font-size: 200%;
  font-weight: normal;
  border-bottom: 1px solid $doc-bg;
  padding: 0.2em;
  margin: 0;
  line-height: 1.1;
}

div.section h2, div.section h3 {
  @include font-family-list($heading-font, $backup-font);
  color: $highlight-fg;
  text-align: left;
  font-weight: normal;
  padding: 0.2em
}

div.section h2 {
  font-size: 160%;
  margin: 1.5em 0.3em 0;
}

div.section h3 {
  font-size: 140%;
  margin: 1em 0.5em -0.2em;
}

div.section div.section-foot {
  margin: 1em 0 -0.5em;
  padding: 0.5em 1em 0;
  border-top: 1px solid $doc-bg;
  line-height: 1.2;
}

.small {
  font-size: 80%;
}

div.section p {
  margin: 0.5em;
  padding: 0.5em 0.5em 0;
}

tt, code {
  @include font-family-list($monospace-font, $backup-monospace-font);
  font-size: 90%; // Reduce monospace font size in inline text.
  margin-left: 0.2em;
  margin-right: 0.2em;
  color: $link-fg;
}

div.section blockquote {
  font-style: italic;
  font-size: 110%;
  margin: 2.5em 3em 2em;
  padding: 0.1em 1em 0.5em;
  background-color: $subsection-bg;
  color: $body-em;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
}

pre {
  @include font-family-list($monospace-font, $backup-monospace-font);
  white-space: pre;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-size: 90%;
}

div.section pre {
  margin: 1em 2em 0.5em;
  padding: 0.5em;
  color: $body-em;
  white-space: pre;
  text-shadow: none;
  border-left: 1px solid $link-fg;
  font-size: 90%;
}

div.sphinxsidebarsection {
  display: block;
  padding: 0;
  margin: 0;
}

div.sphinxsidebar, div.sphinxsidebar a {
  color: $body-em;
}

div.section ul, div.sphinxsidebar ul {
  list-style: none;
  margin: 0.2em 0;
  padding-left: 2.2em;
  text-indent: -1.2em;
}

div.sphinxsidebar ul > li:before {
  content: "\2022 \2002";
}

div.sphinxsidebar p.topless {
  margin-left: 0;
  padding-left: 1em;
}

div.section ol {
  counter-reset: li;
  list-style: none;
  margin-left: 0;
  padding-left: 2.6em;
  text-indent: -1.6em;
}

div.section div.parts {
  margin: 0;
  padding: 0.1em;
  color: $link-fg;
  border-bottom: 1px solid $doc-bg;
  line-height: 1.2;
}

div.section div.parts ol {
  padding-left: 5em;
}

div.section li {
  margin: 0.1em 0.1em 0.1em 1em;
}

div.section ul > li:before {
  content: "\2023 \2002";
  color: $body-em;
}

div.section ol > li:before {
  content: counter(li) ". \2000";
  counter-increment: li;
  color: $body-em;
}

div.section div.parts ul > li:before {
  content: "\2610 \2002";
  color: $body-em;
  float: left;
  margin-right: 1em;
  min-width: 1em;
  text-align: center;
}

div.section div.parts ul > li.ticked:before {
  content: "\2611 \2002";
  color: $body-em;
  float: left;
  margin-right: 1em;
  min-width: 1em;
  text-align: center;
}

div.section li p {
  margin: 0;
  padding: 0;
}

div.section dl {
  margin: 1em 2em 0.5em;
  padding: 0;
}

div.section dt {
  background-color: $subsection-bg;
  margin: 1em 0 0;
  padding: 0.2em 0.5em;
  font-weight: bold;
  color: $body-em;
}

div.section dd {
  margin: 0;
  padding: 0 2em 0.2em;
}

div.section div.right, div.section div.left {
  margin: 0;
  padding: 0;
}

a {
  color: $link-fg;
  text-decoration: none;
}

div.section a {
  color: $link-fg;
  text-decoration: underline;
}

div.section h2 a, div.section h3 a, div.section h4 a,
div.section h5 a, div.section h6 a {
  color: $highlight-fg;
  text-decoration: none;
}

div.section h1 a {
  color: $highlight-fg;
  text-decoration: none;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  color: $body-fg;
}

div.section a.footnote-ref {
  text-decoration: none;
}

body > h1 a, h1.title a {
  color: $highlight-fg;
}

a:hover {
  text-shadow: 0 0 8px $link-fg;
}

a.headerlink {
  color: $link-fg;
  text-shadow: none;
  visibility: hidden;
}

a.headerlink:hover {
  color: $highlight-fg;
  text-shadow: 0 0 8px $highlight-fg;
}

h1:hover > a.headerlink, h2:hover > a.headerlink, h3:hover > a.headerlink,
h4:hover > a.headerlink, h5:hover > a.headerlink, h6:hover > a.headerlink,
dt:hover > a.headerlink {
  visibility: visible;
}

div.footer {
  margin: 0.5em;
  font-size: 80%;
  text-align: right;
}

div.right {
  float: right;
}

div.left {
  float: left;
}

div.documentwrapper {
  background-color: $doc-bg;
}

div.bodywrapper {
  margin: 0 0 0 10em;
}

div.body {
  padding: 0 1em;
}

div.sphinxsidebar {
  float: left;
  width: 10em;
  padding: 10px;
}

table.indextable {
  margin-bottom: 1em;
}

table.indextable td {
  margin: 0;
  padding: 0.2em 2em 0.2em 0.5em;
}

em {
  font-weight: normal;
  font-style: italic;
}

em.property {
  margin: 0 0.25em;
}

strong {
  font-weight: bold;
  font-style: normal;
  color: $body-em;
}

big {
  font-size: 120%;
  margin: 0 0.25em;
}

.viewcode-link {
  margin: 0 0.5em;
  font-variant: small-caps;
  vertical-align: text-top;
}

table.codehilitetable {
  margin: 1em 2em 0.5em;
  padding: 0;
  border-collapse: collapse;
  border-spacing: 0;
  display: block;
  overflow-x: auto;
  overflow-y: visible;
  max-width: 100%;
}

table.codehilitetable td {
  padding: 0;
}

table.codehilitetable div.linenodiv {
  margin: 0;
  padding: 0;
  border-right: 1px solid $link-fg;
}

table.codehilitetable div.linenodiv pre {
  color: $link-fg;
}

table.codehilitetable pre {
  @include font-family-list($monospace-font, $backup-monospace-font);
  border: 0;
  margin: 0;
  padding: 0.5em; 
  white-space: pre;
  line-height: 1.25;
}

div.codehilite {
  margin: 0;
  padding: 0;
  line-height: 1.25;
}

div.section>div.codehilite {
  overflow-x: auto;
  overflow-y: visible;
}

hr {
  width: 80%;
  height: 0;
  border: 0;
  border-top: 1px solid $subsection-bg;
}

div.section hr {
  width: 100%;
  border-top: 1px solid $doc-bg;
}

div.section img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

div.section ul.tagcloud {
  list-style: none;
  text-indent: 0;
  overflow: hidden;
  padding: 1em;
  margin: 1em 8%;
}

div.section ul.tagcloud li {
  float: left;
  padding: 2px;
}

div.section ul.tagcloud li:before {
  content: none;
}

div.section ul.tagcloud li a {
  text-decoration: none;
}

div.section ul.tagcloud li.tag-5 {
  font-size: 80%;
}
div.section ul.tagcloud li.tag-4 {
  font-size: 120%;
}
div.section ul.tagcloud li.tag-3 {
  font-size: 170%;
}
div.section ul.tagcloud li.tag-2 {
  font-size: 230%;
}
div.section ul.tagcloud li.tag-1 {
  font-size: 300%;
}

div.footnote {
  font-size: 80%;
  line-height: 1.5;
}

div.footnote > ol {
  counter-reset: li;
  list-style: none;
  margin: 0;
  padding: 0;
  text-indent: -1.8em;
}

div.footnote > ol > li {
  margin: 1em 3.6em;
}

div.footnote p {
  display: inline;
}

#footnote_box {
  background-color: $subsection-bg;
  border: 1px solid $doc-bg;
  padding: 0 1em;
  margin: 1em;
  -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.5);
  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.5);
  box-shadow: 0 3px 6px rgba(0,0,0,0.5);
}

sup, sub {
  vertical-align: baseline;
  position: relative;
}

sub {
  bottom: 1ex;
}

sup {
  top: -0.8ex;
}

